lab1/Test/L1-A-1-23.cmm
int R1R_K5b ( int xomA [ 547377613 ] [ 669612283 ] 
  , int c , struct x_B0j {
}EBT [ 676724099 ] , struct {
}f1IPnf1iO , int B400yf_eLcFofmPv ) {
}
float ;
float ;
int RfIcELEp9RHpDOeRBq ( struct {
  float QL ;
}ZZo3qp , int Cos , int uss9TWz ) {
  float Ivi ;
}
float ;
int W3h2C5W6R5LqDDCwTA ( ) {
  struct {
  }Z [ 1730306707 ] [ 1215715729 ] [ 79040823 ] [ 
    2133632208 ] ;
  if ( eBVJ0 )   zwxZm_iyVswjC9n75 ;
else [   if ( bskZy )   okQeF50mIWCAk ;


}
float return OzGKko1ie08l , IsXSM , Va 


;
int ;
